--- a/pom.xml
+++ b/pom.xml
@@ -22,13 +22,14 @@
         <dependencies>
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
-                <artifactId>junit-jupiter-engine</artifactId>
-                <version>5.3.2</version>
+                <artifactId>junit-jupiter-api</artifactId>
+                <version>5.4.0</version>
+                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
-                <artifactId>junit-jupiter-api</artifactId>
-                <version>5.3.2</version>
+                <artifactId>junit-jupiter-engine</artifactId>
+                <version>5.4.0</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
